# python-week-2022

./: .README.md.swp  .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Beerlog.ipynb  Dockerfile  README.md  beerlog.db  conftest.py  docker-compose.yml  pyproject.toml  script.py  start_poetry  test-result.xml  testing.db
.github/: workflows.main.yaml
.github/workflows/: main.yaml
beerlog/: -- SQLite.sql  __main__.py  api.py  beerlog.db  cli.py  config.py  core.py  database.py  models.py  rotas.py  script-test.py  serializers.py  settings.toml
docker/: Dockerfile  entrypoint.sh
docker/postgres/: Dockerfile  create-databases.sh
docs/: day1.md  day2.md  day3.md  day4.md  day5.md
kubernetes/: deployment.yaml  service.yaml
openbeerdb_csv/: breweries.csv  breweries_geocode.csv  categories.csv  styles.csv
tests/: test_core.py  test_functional_api.py  test_functional_cli.py
